--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ transformers==4.57.6
 langchain-text-splitters
 langchain_community
 unstructured
-tiktoken
+tiktoken=0.12.0 
+langchain-openai==1.1.7
+openai==2.15.0
+pytokens==0.3.0
+tokenizers==0.22.2
+pytokens==0.3.0
+asttokens==3.0.0
