--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ streamlit==1.51.0
 torch==2.9.1
 transformers==4.57.6
 unstructured
-tiktoken==0.12.0 
+tiktoken
 langchain==1.2.6
 langchain-community==0.4.1
-langchain-text-splitters==1.1.0
+langchain-text-splitters
