--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ faiss-cpu
 numpy==2.4.1
 streamlit==1.51.0
 torch==2.9.1
-transformers==4.57.6
+transformers==4.42.4
 unstructured
 tiktoken
-langchain==0.1.16
+langchain==1.2.6
 langchain-community==0.4.1
-langchain-text-splitters
+langchain-text-splitter
