--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ faiss-cpu
 numpy==2.4.1
 streamlit==1.51.0
 torch==2.9.1
-transformers==4.42.4
+transformers==4.57.6
 unstructured
-tiktoken
+tiktoken==0.12.0 
 langchain==1.2.6
 langchain-community==0.4.1
-langchain-text-splitter
+langchain-text-splitter==1.1.0
