--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 faiss-cpu
+langchain==1.2.6
 numpy==2.4.1
 streamlit==1.51.0
 torch==2.9.1
 transformers==4.57.6
+langchain-text-splitters
+langchain-community
 unstructured
-tiktoken==0.12.0 
-langchain==1.2.6
-langchain-community==0.4.1
-langchain-text-splitters==1.1.0
+tiktoken
