--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 faiss-cpu
 langchain==1.2.6
-numpy==2.4.1
-streamlit==1.51.0
 torch==2.9.1
 transformers==4.57.6
 langchain-text-splitters
 langchain-community
 unstructured
 tiktoken
+streamlit==0.81.0
+numpy==1.20.2
+pandas==1.2.4
