--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ streamlit==1.51.0
 torch==2.9.1
 transformers==4.57.6
 unstructured
-tiktoken=0.12.0 
+tiktoken==0.12.0 
 langchain-openai==1.1.7
 openai==2.15.0
 langchain==1.2.6
