--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
-faiss==1.5.3
-huggingface_hub==0.36.0
-ipython==9.7.0
-ipywidgets==8.1.7
-langchain_community==0.4.1
-langchain_text_splitters==1.1.0
-matplotlib==3.10.8
-numexpr==2.14.1
-plotly==6.3.0
-scikit_learn==1.8.0
-streamlit_pdf==2.0.1
-torch==2.9.1
-transformers==4.57.6
+faiss-cpu==1.13.2
+huggingface-hub==0.36.0
+langchain==1.2.6
+langchain-classic==1.0.1
+langchain-community==0.4.1
+langchain-core==1.2.7                        
+langchain-openai==1.1.7
+langchain-text-splitters==1.1.0
+matplotlib==3.10.6
+matplotlib-base==3.10.6 
+matplotlib-inline==0.2.1 
+numexpr==2.14.1  
+numpy==2.4.1
+numpydoc==1.9.0 
+openai==2.15.0   
+pandas==2.3.3 
+pip==25.3
+python==3.13.9
+safetensors==0.7.0  
+scikit-learn==1.7.2                           
+streamlit==1.51.0
+tiktoken==0.12.0 
+tokenizers==0.22.2 
