--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ safetensors==0.7.0
 scikit-learn==1.7.2                           
 streamlit==1.51.0
 tiktoken==0.12.0 
-tokenizers==0.22.2 
+tokenizers==0.22.2
+torch==2.9.1
